# qubit

./: .gitignore  README.md  THESIS_OUTLINE_PROMPT.md
backend/: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  qubit-backend.nginx.conf
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  circuits.py  collaboration.py  health.py  projects.py  websocket.py
backend/app/core/: config.py  deps.py  email.py  oauth.py  security.py
backend/app/db/: __init__.py  mongodb.py
backend/app/models/: __init__.py  project.py  user.py
backend/app/schemas/: __init__.py  auth.py  project.py  user.py
backend/app/services/: convert.py  simulate.py  squander_client.py  squander_detector.py  websocket_manager.py
backend/scripts/: run_locust.sh  run_locust_headless.sh
backend/tests/: __init__.py  conftest.py  test_auth.py  test_database.py  test_squander.py  test_websocket.py
backend/tests/integration/: __init__.py  test_api_endpoints.py  test_auth.py  test_circuits.py  test_database.py  test_fuzz.py  test_health.py  test_projects.py  test_squander.py  test_websocket.py
backend/tests/performance/: __init__.py  locust_auth_test.py  locust_circuits_test.py  locust_load_test.py  locust_projects_test.py  locust_stress_test.py  locust_tests.py
backend/tests/unit/: __init__.py  test_circuit_convert.py  test_convert.py  test_email.py  test_models.py  test_security.py
docs/: backend_uml_class_diagram.plantuml  package_diagram.plantuml  (+2 more)
frontend/: .env.example  .gitignore  (+9 more)
(+211 files in other folders)
