[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "qubitkit-backend"
version = "0.1.0"
description = "FastAPI backend for qubitkit quantum partition visualization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Muhammad Al Farizi"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qubitkit",
]

[project.scripts]
serve = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]