[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "qubitkit-backend"
version = "0.1.3"
description = "FastAPI backend for qubitkit quantum partition visualization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Muhammad Al Farizi"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-json-logger>=2.0.0",
    "qubitkit"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "websockets>=11.0.0"
]

[project.scripts]
serve = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]